deploy: 7095ab8ef50c8a46ed2785697aa9d55267843bf3

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 <span>📅 2025-12-24</span>
             </div>
             <div class="actions">
-                <a href="geoai.zip" class="btn btn-primary">⬇️ Download</a>
+                <a href="plugins/geoai.zip" class="btn btn-primary">⬇️ Download</a>
                 <a href="https://opengeoai.org" class="btn btn-secondary" target="_blank">🏠 Homepage</a>
                 <a href="https://github.com/opengeos/geoai" class="btn btn-secondary" target="_blank">📂 Repository</a>
                 <a href="https://github.com/opengeos/geoai/issues" class="btn btn-secondary" target="_blank">🐛 Issues</a>
@@ -446,7 +446,7 @@
                 <span>📅 2025-12-24</span>
             </div>
             <div class="actions">
-                <a href="hypercoast.zip" class="btn btn-primary">⬇️ Download</a>
+                <a href="plugins/hypercoast.zip" class="btn btn-primary">⬇️ Download</a>
                 <a href="https://hypercoast.org" class="btn btn-secondary" target="_blank">🏠 Homepage</a>
                 <a href="https://github.com/opengeos/HyperCoast" class="btn btn-secondary" target="_blank">📂 Repository</a>
                 <a href="https://github.com/opengeos/HyperCoast/issues" class="btn btn-secondary" target="_blank">🐛 Issues</a>
@@ -471,7 +471,7 @@
                 <span>📅 2025-12-24</span>
             </div>
             <div class="actions">
-                <a href="plugin_template.zip" class="btn btn-primary">⬇️ Download</a>
+                <a href="plugins/plugin_template.zip" class="btn btn-primary">⬇️ Download</a>
                 <a href="https://github.com/opengeos/qgis-plugin-template" class="btn btn-secondary" target="_blank">🏠 Homepage</a>
                 <a href="https://github.com/opengeos/qgis-plugin-template" class="btn btn-secondary" target="_blank">📂 Repository</a>
                 <a href="https://github.com/opengeos/qgis-plugin-template/issues" class="btn btn-secondary" target="_blank">🐛 Issues</a>
@@ -496,7 +496,7 @@
                 <span>📅 2025-12-24</span>
             </div>
             <div class="actions">
-                <a href="samgeo.zip" class="btn btn-primary">⬇️ Download</a>
+                <a href="plugins/samgeo.zip" class="btn btn-primary">⬇️ Download</a>
                 <a href="https://github.com/opengeos/qgis-samgeo-plugin" class="btn btn-secondary" target="_blank">🏠 Homepage</a>
                 <a href="https://github.com/opengeos/qgis-samgeo-plugin" class="btn btn-secondary" target="_blank">📂 Repository</a>
                 <a href="https://github.com/opengeos/qgis-samgeo-plugin/issues" class="btn btn-secondary" target="_blank">🐛 Issues</a>
