--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     <footer>
         <p>
             Made with ❤️ by <a href="https://github.com/giswqs" target="_blank">Qiusheng Wu</a> |
-            <a href="https://github.com/opengeos" target="_blank">Open Geospatial Solutions</a>
+            <a href="https://github.com/opengeos/qgis-plugins" target="_blank">Open Geospatial Solutions</a>
         </p>
     </footer>
 
