Fix missing NASA OPERA plugin icon
- Enhanced icon extraction to handle plugin-specific icon names (e.g., opera.svg)
- Fallback to extract any SVG/PNG in icons directory (excluding about, settings)
- Successfully extracted all 10 plugin icons including NASA OPERA

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         <div class="plugin-card">
             <div class="plugin-header">
                 <div class="plugin-title-row">
-                    
+                    <img src="icons/nasa_opera.svg" alt="NASA OPERA icon" class="plugin-icon">
                     <h2>NASA OPERA</h2>
                 </div>
                 <div class="badges">
