deploy: 53b0811263a22a3ab090e641177a319cc5dd17b1

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <div class="plugin-card">
             <div class="plugin-header">
                 <div class="plugin-title-row">
-                    <img src="icons/qgis_geemap.svg" alt="Geemap icon" class="plugin-icon">
+                    <img src="icons/qgis_geemap.png" alt="Geemap icon" class="plugin-icon">
                     <h2>Geemap</h2>
                 </div>
                 <div class="badges">
@@ -508,7 +508,7 @@
         <div class="plugin-card">
             <div class="plugin-header">
                 <div class="plugin-title-row">
-                    <img src="icons/qgis_leafmap.svg" alt="Leafmap icon" class="plugin-icon">
+                    <img src="icons/qgis_leafmap.png" alt="Leafmap icon" class="plugin-icon">
                     <h2>Leafmap</h2>
                 </div>
                 <div class="badges">
