--- a/index.html
+++ b/index.html
@@ -497,18 +497,18 @@
                     <h2>GeoAI</h2>
                 </div>
                 <div class="badges">
-                    <span class="badge version">v1.0.0</span>
+                    <span class="badge version">v1.0.1</span>
                     <span class="badge category">Analysis</span>
                     
                 </div>
             </div>
-            <p class="description">GeoAI plugin for QGIS providing AI-powered geospatial analysis including Moondream vision-language model for image captioning, querying, object detection, and semantic segmentation model training and inference.</p>
+            <p class="description">GeoAI plugin for QGIS providing AI-powered geospatial analysis including Moondream vision-language model, semantic segmentation, instance segmentation (Mask R-CNN), SamGeo (SAM1/SAM2/SAM3), DeepForest object detection, and water segmentation (OmniWaterMask).</p>
             <div class="tags"><span class="tag">ai</span><span class="tag">deep learning</span><span class="tag">segmentation</span><span class="tag">object detection</span><span class="tag">moondream</span></div>
             <div class="meta">
                 <span>👤 Qiusheng Wu</span>
-                <span>📦 156.8 KB</span>
+                <span>📦 157.3 KB</span>
                 <span>🔧 QGIS 3.28+</span>
-                <span>📅 2026-02-24</span>
+                <span>📅 2026-02-25</span>
             </div>
             <div class="actions">
                 <a href="plugins/geoai.zip" class="btn btn-primary">⬇️ Download</a>
